any vendors and font style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="theme-color" content="#082145">
+    <meta name="theme-color" content="#ff415c">
 
 
     <link rel="apple-touch-icon" sizes="180x180" href="assets/vendor/favicon/apple-touch-icon.png">
@@ -17,25 +17,23 @@
     <meta name="theme-color" content="#ff415c">
 
 
-
-
-    <title>Admin Panel - Təhsildə Keyfiyyət Təminatı Agentliyi | AP - TKTA</title>
-    <meta name="author" content="Əli Mahmudlu - Frontend Web Developer - Edumedia Azerbaijan">
-    <meta name="copyright" content="Əli Mahmudlu - Frontend Web Developer - Edumedia Azerbaijan">
-    <meta name="Description" content="Admin Panel - Təhsildə Keyfiyyət Təminatı Agentliyi | AP - TKTA">
-    <meta name="keywords" content="təhsildə, keyfiyyət, təminatı, agentliyi, tkta, tehsil, keyfiyyet, agentlik">
+    <title>D-TECH</title>
+    <meta name="author" content="Əli Mahmudlu - Frontend Web Developer - Freelance">
+    <meta name="copyright" content="Əli Mahmudlu - Frontend Web Developer - Freelance">
+    <meta name="Description" content="D-TECH">
+    <meta name="keywords" content="d-tech, d, tech">
     <meta property="image" content="" />
-    <meta property="og:title" name="og:title" content="Admin Panel - Təhsildə Keyfiyyət Təminatı Agentliyi | AP - TKTA">
+    <meta property="og:title" name="og:title" content="D-TECH">
     <meta property="og:type" content="Home Page" />
     <meta property="og:image" content="" />
-    <meta property="og:url" content="tkta.edu.az" />
-    <meta property="og:description" content="Admin Panel - Təhsildə Keyfiyyət Təminatı Agentliyi | AP - TKTA" />
+    <meta property="og:url" content="d-tech.az" />
+    <meta property="og:description" content="D-TECH" />
 
 
     <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
 </head>
-<body class="dashboard">
+<body>
 
 
 <script src="assets/vendor/jQuery/jquery-3.5.1.js"></script>
