--- a/index.html
+++ b/index.html
@@ -35,6 +35,53 @@
 </head>
 <body>
 
+<section class="section section_navbar">
+    <div class="container-fluid">
+        <div class="section_navbar_container">
+            <a href="index.html" class="section_navbar_container_link">
+                <i class="dtech-icons dtech-logo"></i>
+            </a>
+            <div class="section_navbar_container_menu">
+                <div class="section_navbar_container_menu_item active">
+                    <a href="#" class="section_navbar_container_menu_item--link">
+                        ABOUT COMPANY
+                    </a>
+                </div>
+                <div class="section_navbar_container_menu_item">
+                    <a href="#" class="section_navbar_container_menu_item--link">
+                        OUR SERVICES
+                    </a>
+                </div>
+            </div>
+            <a href="#" class="section_navbar_container_search">
+                <i class="dtech-icons dtech-search"></i>
+            </a>
+        </div>
+    </div>
+</section>
+<section class="section section_header">
+    <div class="container-fluid">
+        <div class="row align-items-center">
+            <div class="col-lg-6 order-2 order-lg-1 pt-2 pb-2">
+                <div class="section_header_img">
+                    <img src="assets/images/header_img.png" class="w-100"/>
+                </div>
+            </div>
+            <div class="col-lg-6 order-1 order-lg-2 pt-2 pb-2">
+                <h1 class="section_header--header">
+                    Spectacular technologies
+                </h1>
+                <p class="section_header--description">
+                    Stimmt is a digital agency for sleek technology and kick-ass design
+                </p>
+                <a href="#" class="customBtn">
+                    <span>about our affairs</span>
+                </a>
+            </div>
+        </div>
+    </div>
+</section>
+
 
 <script src="assets/vendor/jQuery/jquery-3.5.1.js"></script>
 <script src="assets/vendor/popper/popper.min.js"></script>
