--- a/index.html
+++ b/index.html
@@ -62,21 +62,23 @@
         </div>
         <div class="section_navbar_container_mobileMenu">
             <div class="container-fluid">
-                <div class="section_navbar_container_mobileMenu_header">
-                    <a href="index.html" class="section_navbar_container_link">
-                        <i class="dtech-icons dtech-logo"></i>
-                    </a>
-                    <a href="#" class="section_navbar_container_toggle">
-                        <i class="dtech-icons dtech-close"></i>
-                    </a>
-                </div>
-                <div class="section_navbar_container_mobileMenu_search">
-                    <form class="searchGroup">
-                        <input type="search" name="search" id="search" placeholder="Search" />
-                        <button class="searchBtn">
-                            <i class="dtech-icons dtech-search"></i>
-                        </button>
-                    </form>
+                <div>
+                    <div class="section_navbar_container_mobileMenu_header">
+                        <a href="index.html" class="section_navbar_container_link">
+                            <i class="dtech-icons dtech-logo"></i>
+                        </a>
+                        <a href="#" class="section_navbar_container_toggle">
+                            <i class="dtech-icons dtech-close"></i>
+                        </a>
+                    </div>
+                    <div class="section_navbar_container_mobileMenu_search">
+                        <form class="searchGroup">
+                            <input type="search" name="search" id="search" placeholder="Search" />
+                            <button class="searchBtn">
+                                <i class="dtech-icons dtech-search"></i>
+                            </button>
+                        </form>
+                    </div>
                 </div>
                 <div class="section_navbar_container_mobileMenu_items">
                     <div class="section_navbar_container_mobileMenu_items_item active">
@@ -90,20 +92,68 @@
                         </a>
                     </div>
                 </div>
+                <div class="section_navbar_container_mobileMenu_footer">
+                    <div class="section_navbar_container_mobileMenu_footer_lang">
+                        <a href="#" class="section_navbar_container_mobileMenu_footer_lang_item">
+                            RU
+                        </a>
+                        <a href="#" class="section_navbar_container_mobileMenu_footer_lang_item active">
+                            EN
+                        </a>
+                    </div>
+                    <div class="section_navbar_container_mobileMenu_footer_social">
+                        <a href="#" class="section_navbar_container_mobileMenu_footer_social_item">
+                            <i class="dtech-icons dtech-instagram"></i>
+                        </a>
+                        <a href="#" class="section_navbar_container_mobileMenu_footer_social_item">
+                            <i class="dtech-icons dtech-fb"></i>
+                        </a>
+                        <a href="#" class="section_navbar_container_mobileMenu_footer_social_item">
+                            <i class="dtech-icons dtech-linkedin"></i>
+                        </a>
+                        <a href="#" class="section_navbar_container_mobileMenu_footer_social_item">
+                            <i class="dtech-icons dtech-twitter"></i>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
+    </div>
+</section>
+<section class="sidebar">
+    <div class="sidebar_lang">
+        <a href="#" class="sidebar_lang_item">
+            RU
+        </a>
+        <a href="#" class="sidebar_lang_item active">
+            EN
+        </a>
+    </div>
+    <div class="sidebar_social">
+        <a href="#" class="sidebar_social_item">
+            <i class="dtech-icons dtech-instagram"></i>
+        </a>
+        <a href="#" class="sidebar_social_item">
+            <i class="dtech-icons dtech-fb"></i>
+        </a>
+        <a href="#" class="sidebar_social_item">
+            <i class="dtech-icons dtech-linkedin"></i>
+        </a>
+        <a href="#" class="sidebar_social_item">
+            <i class="dtech-icons dtech-twitter"></i>
+        </a>
     </div>
 </section>
 <section class="section section_header">
     <div class="container-fluid">
         <div class="containerBreak">
             <div class="row containerBreak-row containerBreak-row-left">
-                <div class="col-lg-6 order-2 order-lg-1 pt-2 pb-2">
+                <div class="col-lg-6 col-md-6 col-sm-6 order-sm-1 order-md-1 order-2 order-lg-1 pt-2 pb-2">
                     <div class="containerBreak-row-img section_header_img">
                         <img src="assets/images/header_img.png" class="w-100"/>
                     </div>
                 </div>
-                <div class="col-lg-6 order-1 order-lg-2 pt-2 pb-2">
+                <div class="col-lg-6 col-md-6 col-sm-6 order-sm-2 order-md-2 order-1 order-lg-2 pt-2 pb-2">
                     <h1 class="section_header--header">
                         Spectacular technologies
                     </h1>
@@ -122,6 +172,66 @@
                 <i class="dtech-icons dtech-scroll"></i>
                 <span>Down</span>
             </a>
+        </div>
+    </div>
+</section>
+
+
+<section class="section section_footer">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-3">
+                <a href="#" class="section_footer_logo">
+                    <i class="dtech-icons dtech-logo"></i>
+                </a>
+            </div>
+            <div class="col-lg-3">
+                <div class="section_footer_section">
+                    <h3 class="section_footer_section--header big special">
+                        Get in touch
+                    </h3>
+                    <div class="section_footer_section--body">
+                        Standing still is not an option. We develop with the future of your brand in mind. Where do you want to go, which channels are you going to use to get there, and where will the conversion take place? Stimmt helps you answer those questions.
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="section_footer_section">
+                    <h3 class="section_footer_section--header">
+                        email addresses
+                    </h3>
+                    <div class="section_footer_section--body">
+                        <ul>
+                            <li>
+                                <a href="mailto:support@dtech.az">Support@dtech.az</a>
+                            </li>
+                            <li>
+                                <a href="mailto:nazim.aliyev@dtech.az">nazim.aliyev@dtech.az</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3">
+                <div class="section_footer_section">
+                    <h3 class="section_footer_section--header">
+                        Our address in Baku
+                    </h3>
+                    <div class="section_footer_section--body">
+                        <ul>
+                            <li>
+                                Nizami 1/3. Nizami Plaza
+                            </li>
+                            <li>
+                                066 js Amsterdam
+                            </li>
+                            <li>
+                                <a href="tel:+994502016136">+994 50 201 61 36</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
