update new version

--- a/ourServicesInner.html
+++ b/ourServicesInner.html
@@ -42,13 +42,13 @@
                 <i class="dtech-icons dtech-logo"></i>
             </a>
             <div class="section_navbar_container_menu">
-                <div class="section_navbar_container_menu_item active">
-                    <a href="#" class="section_navbar_container_menu_item--link">
+                <div class="section_navbar_container_menu_item">
+                    <a href="index.html" class="section_navbar_container_menu_item--link">
                         ABOUT COMPANY
                     </a>
                 </div>
-                <div class="section_navbar_container_menu_item">
-                    <a href="#" class="section_navbar_container_menu_item--link">
+                <div class="section_navbar_container_menu_item active">
+                    <a href="ourServices.html" class="section_navbar_container_menu_item--link">
                         OUR SERVICES
                     </a>
                 </div>
@@ -64,7 +64,7 @@
             <div class="container-fluid">
                 <div>
                     <div class="section_navbar_container_mobileMenu_header">
-                        <a href="index.html" class="section_navbar_container_link">
+                        <a href="index.html" class="section_navbar_container_mobileMenu_header_link">
                             <i class="dtech-icons dtech-logo"></i>
                         </a>
                         <a href="#" class="section_navbar_container_toggle">
@@ -81,13 +81,13 @@
                     </div>
                 </div>
                 <div class="section_navbar_container_mobileMenu_items">
-                    <div class="section_navbar_container_mobileMenu_items_item active">
-                        <a href="#" class="section_navbar_container_mobileMenu_items_item--link">
+                    <div class="section_navbar_container_mobileMenu_items_item">
+                        <a href="index.html" class="section_navbar_container_mobileMenu_items_item--link">
                             ABOUT COMPANY
                         </a>
                     </div>
-                    <div class="section_navbar_container_mobileMenu_items_item">
-                        <a href="#" class="section_navbar_container_mobileMenu_items_item--link">
+                    <div class="section_navbar_container_mobileMenu_items_item active">
+                        <a href="ourServices.html" class="section_navbar_container_mobileMenu_items_item--link">
                             OUR SERVICES
                         </a>
                     </div>
