--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             </a>
             <div class="section_navbar_container_menu">
                 <div class="section_navbar_container_menu_item active">
-                    <a href="#" class="section_navbar_container_menu_item--link">
+                    <a href="index.html" class="section_navbar_container_menu_item--link">
                         ABOUT COMPANY
                     </a>
                 </div>
                 <div class="section_navbar_container_menu_item">
-                    <a href="#" class="section_navbar_container_menu_item--link">
+                    <a href="ourServices.html" class="section_navbar_container_menu_item--link">
                         OUR SERVICES
                     </a>
                 </div>
@@ -64,7 +64,7 @@
             <div class="container-fluid">
                 <div>
                     <div class="section_navbar_container_mobileMenu_header">
-                        <a href="index.html" class="section_navbar_container_link">
+                        <a href="index.html" class="section_navbar_container_mobileMenu_header_link">
                             <i class="dtech-icons dtech-logo"></i>
                         </a>
                         <a href="#" class="section_navbar_container_toggle">
@@ -82,12 +82,12 @@
                 </div>
                 <div class="section_navbar_container_mobileMenu_items">
                     <div class="section_navbar_container_mobileMenu_items_item active">
-                        <a href="#" class="section_navbar_container_mobileMenu_items_item--link">
+                        <a href="index.html" class="section_navbar_container_mobileMenu_items_item--link">
                             ABOUT COMPANY
                         </a>
                     </div>
                     <div class="section_navbar_container_mobileMenu_items_item">
-                        <a href="#" class="section_navbar_container_mobileMenu_items_item--link">
+                        <a href="ourServices.html" class="section_navbar_container_mobileMenu_items_item--link">
                             OUR SERVICES
                         </a>
                     </div>
@@ -274,7 +274,7 @@
                 <div class="col-lg-6">
                     <div class="section_weFixIt_body_items">
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">Interaktiv texnologiyalar</span>
                                 <div class="section_weFixIt_body_items_item_body">
                                     <div class="section_weFixIt_body_items_item_body_items">
@@ -297,52 +297,52 @@
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">Interaktiv Vitrinlər</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">Virtual promouter</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">proyeksiya ekranlari</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">avtomatlaşdirilmiş idarəetmə sistemi</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">Web</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">tətbiqi soft</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">mikronontrollərin proqramlaşdırılması</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">App</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">crm</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">kabel çəkmə</span>
                             </a>
                         </div>
@@ -351,52 +351,52 @@
                 <div class="col-lg-6">
                     <div class="section_weFixIt_body_items">
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">bulud hesablaması</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">müşahidə sistemləri</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">Gps unıt sistemləri</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">Mini ats və voip teledoniya sistemləri</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">hosting  və serverlərin qurulması</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">domen kontrolleri</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">E-mail server</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">Sənəd dövriyyəsi</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">Ip - telefoniya</span>
                             </a>
                         </div>
                         <div class="section_weFixIt_body_item_pos">
-                            <a href="#" class="section_weFixIt_body_items_item">
+                            <a href="ourServicesInner.html" class="section_weFixIt_body_items_item">
                                 <span class="section_weFixIt_body_items_item--text">Cağri mərkəzi</span>
                             </a>
                         </div>
