--- a/ourServicesInner.html
+++ b/ourServicesInner.html
@@ -31,24 +31,24 @@
 
 
     <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.css" />
-    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main.min.css" />
 </head>
 <body class="themeWhite">
 
 <section class="section section_navbar">
     <div class="container-fluid">
         <div class="section_navbar_container">
-            <a href="index.html" class="section_navbar_container_link">
+            <a href="" class="section_navbar_container_link">
                 <i class="dtech-icons dtech-logo"></i>
             </a>
             <div class="section_navbar_container_menu">
                 <div class="section_navbar_container_menu_item">
-                    <a href="index.html" class="section_navbar_container_menu_item--link">
+                    <a href="" class="section_navbar_container_menu_item--link">
                         ABOUT COMPANY
                     </a>
                 </div>
                 <div class="section_navbar_container_menu_item active">
-                    <a href="ourServices.html" class="section_navbar_container_menu_item--link">
+                    <a href="services" class="section_navbar_container_menu_item--link">
                         OUR SERVICES
                     </a>
                 </div>
@@ -64,7 +64,7 @@
             <div class="container-fluid">
                 <div>
                     <div class="section_navbar_container_mobileMenu_header">
-                        <a href="index.html" class="section_navbar_container_mobileMenu_header_link">
+                        <a href="" class="section_navbar_container_mobileMenu_header_link">
                             <i class="dtech-icons dtech-logo"></i>
                         </a>
                         <a href="#" class="section_navbar_container_toggle">
@@ -82,12 +82,12 @@
                 </div>
                 <div class="section_navbar_container_mobileMenu_items">
                     <div class="section_navbar_container_mobileMenu_items_item">
-                        <a href="index.html" class="section_navbar_container_mobileMenu_items_item--link">
+                        <a href="" class="section_navbar_container_mobileMenu_items_item--link">
                             ABOUT COMPANY
                         </a>
                     </div>
                     <div class="section_navbar_container_mobileMenu_items_item active">
-                        <a href="ourServices.html" class="section_navbar_container_mobileMenu_items_item--link">
+                        <a href="services" class="section_navbar_container_mobileMenu_items_item--link">
                             OUR SERVICES
                         </a>
                     </div>
@@ -328,6 +328,6 @@
 <script src="assets/vendor/popper/popper.min.js"></script>
 <script src="assets/vendor/bootstrap/js/bootstrap.js"></script>
 
-<script src="assets/js/main.js"></script>
+<script src="assets/js/main.min.js"></script>
 </body>
 </html>
