--- a/ourServices.html
+++ b/ourServices.html
@@ -176,107 +176,107 @@
                         <div class="col-lg-12 pb-5">
                             <div class="section_ourServicesPage_body_items">
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">Interaktiv texnologiyalar</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">Interaktiv Vitrinlər</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">Virtual promouter</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">proyeksiya ekranlari</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">avtomatlaşdirilmiş idarəetmə sistemi</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">Web</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">tətbiqi soft</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">mikronontrollərin proqramlaşdırılması</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">App</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">crm</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">kabel çəkmə</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">bulud hesablaması</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">müşahidə sistemləri</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">Gps unıt sistemləri</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">Mini ats və voip teledoniya sistemləri</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">hosting  və serverlərin qurulması</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">domen kontrolleri</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">E-mail server</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">Sənəd dövriyyəsi</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">Ip - telefoniya</span>
                                     </a>
                                 </div>
                                 <div class="section_ourServicesPage_body_item_pos">
-                                    <a href="services/details" class="section_ourServicesPage_body_items_item">
+                                    <a href="serviceDetails" class="section_ourServicesPage_body_items_item">
                                         <span class="section_ourServicesPage_body_items_item--text">Cağri mərkəzi</span>
                                     </a>
                                 </div>
