--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 <section class="section section_navbar">
     <div class="container-fluid">
         <div class="section_navbar_container">
-            <a href="" class="section_navbar_container_link">
+            <a href="/" class="section_navbar_container_link">
                 <i class="dtech-icons dtech-logo"></i>
             </a>
             <div class="section_navbar_container_menu">
                 <div class="section_navbar_container_menu_item active">
-                    <a href="" class="section_navbar_container_menu_item--link">
+                    <a href="/" class="section_navbar_container_menu_item--link">
                         ABOUT COMPANY
                     </a>
                 </div>
@@ -64,7 +64,7 @@
             <div class="container-fluid">
                 <div>
                     <div class="section_navbar_container_mobileMenu_header">
-                        <a href="" class="section_navbar_container_mobileMenu_header_link">
+                        <a href="/" class="section_navbar_container_mobileMenu_header_link">
                             <i class="dtech-icons dtech-logo"></i>
                         </a>
                         <a href="#" class="section_navbar_container_toggle">
@@ -82,7 +82,7 @@
                 </div>
                 <div class="section_navbar_container_mobileMenu_items">
                     <div class="section_navbar_container_mobileMenu_items_item active">
-                        <a href="" class="section_navbar_container_mobileMenu_items_item--link">
+                        <a href="/" class="section_navbar_container_mobileMenu_items_item--link">
                             ABOUT COMPANY
                         </a>
                     </div>
